<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single"
        android:id="@+id/menu_group"
        >
        <item
            android:id="@+id/menu_Profile"
            android:icon="@android:drawable/sym_def_app_icon"
            android:title="@string/Profile_name"
            />
        <item
            android:id="@+id/menu_Collection"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/Collection_name"
            />
        <item
            android:id="@+id/menu_Shop"
            android:icon="@android:drawable/star_on"
            android:title="@string/Shop_name"
            />
        <item
            android:id="@+id/menu_LogOut"
            android:icon="@android:drawable/ic_delete"
            android:title="@string/main_LogOut"
            />
    </group>
</menu>