<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Shop"
    android:background="@drawable/linen_background">


    <TextView
        android:id="@+id/textShop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Shop_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:text="@string/buttonBuy"
        app:layout_constraintBottom_toTopOf="@+id/buttonCoins"
        app:layout_constraintEnd_toEndOf="@+id/textShop"
        app:layout_constraintStart_toStartOf="@+id/textShop" />

    <Button
        android:id="@+id/buttonCoins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:text="@string/buttonCoins"
        app:layout_constraintEnd_toEndOf="@+id/textShop"
        app:layout_constraintStart_toStartOf="@+id/textShop"
        app:layout_constraintTop_toBottomOf="@+id/textShop" />

    <TextView
        android:id="@+id/textBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/Buy"
        app:layout_constraintBottom_toTopOf="@+id/buttonBuy"
        app:layout_constraintEnd_toEndOf="@+id/buttonBuy"
        app:layout_constraintStart_toStartOf="@+id/buttonBuy" />

    <TextView
        android:id="@+id/textCoins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/Coins"
        app:layout_constraintBottom_toTopOf="@+id/buttonCoins"
        app:layout_constraintEnd_toEndOf="@+id/buttonCoins"
        app:layout_constraintStart_toStartOf="@+id/buttonCoins" />
</android.support.constraint.ConstraintLayout>